--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
 	  
-	   <p><a href="https://drive.google.com/file/d/1yb0EUDUNqiFvL6_vFry2TMtsTINJiYDD/view?usp=sharing"target="_blank">Download CV <i class="icon-download5"></i></a></p>
+	   
     </div>
   </section><!-- End Hero -->
 
@@ -87,7 +87,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/prof.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Content Developer.</h3>
