--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <h4><a href="">Content Writer</a></h4>
 			  <h5>Wordworkers</h5>
               <h6>2019-Present</h6>
-			  <p>Article Writer</p>
+			  <p>An online freelancing hub for content writers</p>
             </div>
           </div>
 
