--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p class="font-bold">
               
 			  <p><i class="bx bxs-circle"></i>Committed and dedicated content writer with three years of experience seeking to grasp my skills and knowledge in the field of Biochemistry and Biotechnology. </p>
-			  <p><i class="bx bxs-circle"></i>Expert in creating concise yet effective content with strong writin skills on different informative and product review articles. </p>
+			  <p><i class="bx bxs-circle"></i>Expert in creating concise yet effective content with strong writing skills on different informative and product review articles. </p>
 			  <p><i class="bx bxs-circle"></i>Inclusive soft skills like maintaining strong relationships and completing projects on time with 0% plagiarism and 100% original content. </p>
       </div>
            
